--- a/需求规约.md
+++ b/需求规约.md
@@ -5,6 +5,7 @@
 1.1.1 项目名称 
 
 1.1.2 项目描述 
+Yocto Project是一个开源合作项目，其帮助开发人员开发针对嵌入式的Linux定制系统。Yocto则是项目的开源社区，其中Mailing lists的部分是社区用户发送到yocto的邮件，以及对他们发送的邮件的回复。本软件旨在对这样一个社区中的Mailing lists部分在特定时间段中的用户交流活跃情况进行分析，并以可视化的形式呈现分析的结果。
 
 1.1.3 目标与范围
 
